--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "npm": "^10.8.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-modal": "^3.16.1",
     "react-router-dom": "^6.23.1",
     "react-scripts": "^5.0.1",
+    "reactjs-popup": "^2.0.6",
     "typescript": "^5.4.2",
     "web-vitals": "^2.1.4"
   },
